# simple-simplex

./: Cargo.toml  README.md
docs/: NOISECONFIG.md  NOTES.md  TERMSNDEF.md
src/: Lib.rs  lib.rs  main.rs
tests/: main.rs
