[package]
name = "simple-simplex"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"
description = "Generates 2d simplex noise values and applies Fractal Brownian Motion."
repository = "repo"
readme = "README.md"
exclude = [
    "/images"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_pcg = "0.3.1"
