[package]
name = "simple-simplex"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Generates 2d simplex noise values and applies Fractal Brownian Motion."
repository = "https://github.com/RylanYancey/simple-simplex"

exclude = [
    "/images/*",
    "/docs/*"
]

keywords = [
    "simplex",
    "perlin",
    "noise",
    "generation",
    "procedural"
]

categories = [
    "algorithms",
    "mathematics",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_pcg = "0.3.1"
